[tool.poetry]
name = "paclearningmodels"
version = "0.1.0"
description = ""
authors = ["Ben Yohay"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
numpy = "^1.26.4"
matplotlib = "^3.8.3"
scipy = "^1.12.0"

[dependency-groups]
dev = [
  "pytest>=8.1.1,<9",
  "ruff>=0.3.5,<1",
  "isort>=5.13.2,<6",
  "pytest-mock>=3.14.1,<4"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I"] # Error, Flake8, Isort
ignore = ["E501"] # Line too long, handled by black

[tool.isort]
profile = "black"
src_paths = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"] 